src/iac/deployment/manifests/commands-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commands-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dotnet-commands-service
  template:
    metadata:
      labels:
        app: dotnet-commands-service
    spec:
      containers:
        - name: dotnet-commands-service
          image: peter6/dotnet-commands-service:latest
---
apiVersion: v1
kind: Service
metadata:
  name: commands-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: dotnet-commands-service
  ports:
    - name: dotnet-commands-service
      protocol: TCP
      port: 8080
      targetPort: 8080
