src/iac/deployment/manifests/open-lgtm-deploy.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lgtm-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lgtm
  template:
    metadata:
      labels:
        app: lgtm
    spec:
      containers:
        - name: lgtm
          image: grafana/otel-lgtm:latest
          ports:
            - containerPort: 4317
              name: lgtm-grpc-port
            - containerPort: 4318
              name: lgtm-http-port
            - containerPort: 3000
              name: web-view-port
          readinessProbe:
            exec:
              command:
                - cat
                - /tmp/ready
          volumeMounts:
            - name: tempo-data
              mountPath: /data/tempo
            - name: grafana-data
              mountPath: /data/grafana
            - name: loki-data
              mountPath: /data/loki
            - name: loki-storage
              mountPath: /loki
            - name: p8s-storage
              mountPath: /data/prometheus
      volumes:
        - name: tempo-data
          emptyDir: {}
        - name: loki-data
          emptyDir: {}
        - name: grafana-data
          emptyDir: {}
        - name: loki-storage
          emptyDir: {}
        - name: p8s-storage
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: lgtm-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: lgtm
  ports:
  - name: lgtm-grpc-port
    protocol: TCP
    port: 4317
    targetPort: 4317
  - name: lgtm-http-port
    protocol: TCP
    port: 4318
    targetPort: 4318
  - name: web-view-port
    protocol: TCP
    port: 3000
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: lgtm-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: lgtm
  ports:
  - name: lgtm-grpc-port 
    protocol: TCP
    port: 4317
    targetPort: 4317
  - name: lgtm-http-port 
    protocol: TCP
    port: 4318
    targetPort: 4318
  - name: web-view-port 
    protocol: TCP
    port: 3000
    targetPort: 3000
