src/iac/deployment/manifests/platforms-deploy.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dotnet-platform-service
  template:
    metadata:
      labels:
        app: dotnet-platform-service
    spec:
      containers:
        - name: dotnet-platform-service
          image: peter6/dotnet-platform-service:latest
---
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: platforms-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: dotnet-platform-service
  ports:
    - name: dotnet-platform-service
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: platform-service-grpc
      protocol: TCP
      port: 666
      targetPort: 666
