src/iac/deployment/manifests/platforms-node-port-service.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: platform-node-port-service
spec:
  type: NodePort
  selector:
    app: dotnet-platform-service
  ports:
    - name: dotnet-platform-service
      protocol: TCP
      port: 8080
      targetPort: 8080
