src/iac/deployment/manifests/ingress-service.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
spec:
  rules:
    - host: host.this
      http:
        paths:
          - path: /api/platforms
            pathType: Prefix
            backend:
              service:
                name: platforms-clusterip-service
                port:
                  number: 8080
          - path: /api/commands/platforms
            pathType: Prefix
            backend:
              service:
                name: commands-clusterip-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-clusterip-service
                port:
                  number: 3000
